--- a/alurabooks-aula03/styles/topicos.css
+++ b/alurabooks-aula03/styles/topicos.css
@@ -1,5 +1,5 @@
 .tópicos {
-    background: var(--azul-degrade);
+    background: var(--azul-claro);
     text-align: center;
     padding: 1em 0;
 }
